--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,10 @@
     </scm>
 
     <properties>
-  <sonar.projectKey>kirebr_parser</sonar.projectKey>
-  <sonar.organization>kirebr</sonar.organization>
-  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+             <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+             <sonar.projectKey>kirebr_parser</sonar.projectKey>
+             <sonar.organization>kirebr</sonar.organization>
+             <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
     <distributionManagement>
